# StarisEngine

./: .gitignore  .sconsign.dblite  Cargo.toml  SConstruct
examples/game/: .sconsign.dblite  SConstruct
examples/game/src/: main.cpp
include/sengine/: clock.h  color.h  command.h  context.h  event.h  export.h  logger.h  sengine.h  state_machine.h
src/: lib.rs  logger.rs  sengine.cpp  sengine.os  sengine.rs
src/GameData/: clock.cpp  event.cpp  state_machine.cpp
src/Logger/: logger.cpp
src/Render/: color.cpp  context.cpp
src/data/: state_machine.rs
src/render/: color.rs  context.rs  mod.rs  shapes.rs
staris_core/: Cargo.toml
staris_core/src/: lib.rs  sengine.rs
staris_core/src/data/: command.rs  mod.rs  state_machine.rs
staris_macro/: Cargo.toml
staris_macro/src/: lib.rs
tests/testgame/: Cargo.toml
tests/testgame/src/: main.rs
