[package]
name = "staris_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "staris_core",
    "staris_macro",
]

exclude = [
    "tests",
]

[dependencies]
staris_core = { path = "staris_core" }
staris_macro = { path = "staris_macro" }